--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -43,3 +43,29 @@ jobs:
       with:
         name: Mocha-Test-Results
         path: test-results.xml
+
+  code-coverage:
+    name: Code Coverage
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+    
+    - name: Setup NodeJS Version - 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    
+    - name: Install Depedencies
+      run: npm install
+    
+    - name: Check Code Coverage
+      continue-on-error: true
+      run: npm run coverage
+
+    - name: Archive Code Coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: Code-Coverage-Results
+        path: coverage
+        retention-days: 5
