--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -82,3 +82,16 @@ jobs:
         name: Code-Coverage-Results
         path: coverage
         retention-days: 5
+
+  docker:
+    name: Docker Image Build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ vars.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
