--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -119,3 +119,11 @@ jobs:
 
         echo Testing Image URL using wget
         wget -q -O - 127.0.0.1:3000/live | grep live
+
+    - name: Dokcer Image Push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
