--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -85,6 +85,7 @@ jobs:
 
   docker:
     name: Docker Container
+    needs: [unit-testing, code-coverage]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
